--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,10 @@ server.ssl.key-store=classpath:keystore.p12
 server.ssl.key-store-password=${MENU_CERT_PASSWORD_DKR}
 server.ssl.key-store-type=PKCS12
 server.ssl.key-alias=mycert
+
+
+spring.rabbitmq.host=rabbitmq
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=${RABBITMQ_USER_DKR}
+spring.rabbitmq.password=${RABBITMQ_PASS_DKR}
+spring.rabbitmq.template.default-receive-queue=menuqueue
