feat(cqrs) реализована гексагональная архитектура и CQRS

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,4 +28,8 @@ spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=${RABBITMQ_USER_DKR}
 spring.rabbitmq.password=${RABBITMQ_PASS_DKR}
-spring.rabbitmq.template.default-receive-queue=menuqueue
+
+rabbitmq.queue.menu.find=menu_find_queue
+rabbitmq.queue.menu.created=menu_created_queue
+rabbitmq.queue.menu.updated=menu_updated_queue
+rabbitmq.queue.menu.deleted=menu_deleted_queue
