--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,13 +23,14 @@ server.ssl.key-store-password=${MENU_CERT_PASSWORD_DKR}
 server.ssl.key-store-type=PKCS12
 server.ssl.key-alias=mycert
 
-
 spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=${RABBITMQ_USER_DKR}
 spring.rabbitmq.password=${RABBITMQ_PASS_DKR}
+spring.rabbitmq.listener.simple.auto-startup=true
+spring.rabbitmq.dynamic=true
 
-rabbitmq.queue.menu.find=menu_find_queue
-rabbitmq.queue.menu.created=menu_created_queue
-rabbitmq.queue.menu.updated=menu_updated_queue
-rabbitmq.queue.menu.deleted=menu_deleted_queue
+rabbitmq.queue.prefix=menu_
+rabbitmq.queue.names=dishes,drinks,queue3,queue4
+
+
