feat(dish): добавил базовую работу с блюдами

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,6 +31,6 @@ spring.rabbitmq.listener.simple.auto-startup=true
 spring.rabbitmq.dynamic=true
 
 rabbitmq.queue.prefix=menu_
-rabbitmq.queue.names=dishes,drinks,queue3,queue4
+rabbitmq.queue.names=dishes,find,create,update,delete,ingredients
 
 
